--- a/static/styles.css
+++ b/static/styles.css
@@ -5,7 +5,8 @@ body {
   background-color: white;
   margin: 0 auto; /* centers */
   display: table; /* takes width of children */
-  width: 600px;
+  width: 90%;
+  max-width: 600px;
   margin-top: 20px;
   margin-bottom: 20px;
   -webkit-border-radius: 8px;
@@ -49,10 +50,31 @@ h1 {
   margin-bottom: 10px;
   margin-left: 10px;
   overflow: hidden;
-  float: left;
   /*display: block;  */
+}
+#sliders {
+  float: right;
+  width: 30%;
 }
 .d3-slider {
   margin: 10px;
   width: 100px;
+}
+.slider-name, .slider-val {
+  font-size: 80%;
+}
+#chart {
+  width: 40%;
+  float: left;
+}
+.line {
+}
+.dot {
+  /*stroke: #000;*/
+}
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
 }
