--- a/static/styles.css
+++ b/static/styles.css
@@ -17,7 +17,6 @@ body {
   margin-top: 5px;
   margin-left: 20px;
   margin-right: 20px;
-  border-top: 1px solid black;
   overflow: hidden;
   width: 100%;
   display: block;
@@ -29,9 +28,11 @@ a {
   color: black;
 }
 .byline {
-  float: right;
+  float: left;
   font-size: 80%;
-  display: block;
+  width: 100%;
+  border-bottom: 1px solid black;
+  /*display: block;*/
 }
 .byline a {
   text-decoration: none;
