--- a/static/styles.css
+++ b/static/styles.css
@@ -28,11 +28,11 @@ a {
   color: black;
 }
 .byline {
-  float: left;
-  font-size: 80%;
   width: 100%;
+  font-size: 80%;
+  display: block;
+  text-align: right;
   border-bottom: 1px solid black;
-  /*display: block;*/
 }
 .byline a {
   text-decoration: none;
@@ -63,8 +63,10 @@ h1 {
   /*display: block;  */
 }
 #sliders {
-  float: right;
-  width: 30%;
+  float: left;
+  margin-top: 10px;
+  margin-left: 2px;
+  width: 25%;
 }
 .d3-slider {
   margin: 10px;
@@ -75,6 +77,7 @@ h1 {
 }
 #chart {
   width: 70%;
+  min-width: 400px;
   overflow: hidden;
   float: left;
 }
